src/components/bs5/banner/banner.scss
/* ... */
// 3. Define Banner Variants and Image Treatments
// ==========================================================================
.qld-banner {
  // Banner hero image is hidden by default
  .banner-image {
    display: none;
    background-image: none;
  }

  /* Banner Backgrounds (.with-texture, .with-bg-image) are patterns */
  &.with-texture {
    background-image: var(--#{$prefix}banner-bg-texture);
  }

  &.with-bg-image {
    background-image: var(--#{$prefix}banner-bg-image);
    background-position: 80% 50%; //right center
    background-repeat: no-repeat;
    background-size: cover;

    @include media-breakpoint-down(lg) {
      background-position-x: 70%;
    }

    // On smaller viewports, the container background image renders between breadcrumbs and banner-content.
    // We remove background image from the main container, and shift it to ::before .banner-content
    @include media-breakpoint-down(md) {
      background-image: none;

      .banner-image {
        margin-top: 0.75rem;
      }

      //On mobile, create a gap at top of .banner-inner for the background image
      .banner-content {
        position: relative;
        --#{$prefix}banner-bg-image: url(../img/banner-mobile-pattern.png);

        &:before {
          content: "";
          position: relative;
          display: block;
          margin-left: calc(var(--container-fluid-px) * -1);
          margin-right: calc(var(--container-fluid-px) * -1);
          height: 93px;
          background-image: var(--#{$prefix}banner-bg-image);
          background-position: center center;
          background-size: cover;
        }
      }
    }
  }

  /*
    Banner Images are static hero images that sit with the content.

    Banner Images have several variants:
    - Default: Image is 3:2 ratio and full width
    - .align-grid: Image is full width and aligns to the grid
    - .align-right: Image is full height and aligns to the right
    - .with-gradient: Image has a gradient overlay - applies to align-right only
  */

  &.with-hero-image {
    .banner-image {
      // Pins .banner-image frame to top and bottom rails of the banner
      margin-top: calc(var(--#{$prefix}banner-padding-top) * -1);
      margin-bottom: calc(var(--#{$prefix}banner-padding-bottom) * -1);
      margin-left: 1rem;
      display: flex;
      position: relative;
      align-items: center;
      justify-content: center;
      overflow: hidden;

      //Default banner image is a 3:2 ratio image
      .banner-image-inner {
        aspect-ratio: 3 / 2;
        width: 100%;
        height: auto;
        background: center center / cover no-repeat;
      }

      //Align to grid: .banner-image.align-grid
      &.align-grid {
        .banner-image-inner {
          height: 100%;
          aspect-ratio: unset;
        }
      }

      // On tablets and mobile, the hero-image is full width for all variants.
      @include media-breakpoint-down(md) {
        //Overcome the left and right gutters
        margin: 0 calc(var(--container-fluid-px) * -1);

        &.align-grid,
        &.align-right {
          .banner-image-inner {
            aspect-ratio: 16 / 9;
          }
        }
      }
    }

    // Specific image treatments above medium viewports
    @include media-breakpoint-up(md) {
      overflow: hidden;

      .banner-image {
        &.align-right {
          // Removes relative positioning from this container.
          // This allows the image to break out of the grid and fallback to .qld-banner container's relative position
          position: unset;

          .banner-image-inner {
            // Align right image position
            aspect-ratio: unset;
            position: absolute;
            top: 0;
            bottom: 0;
            right: 0;
            left: calc(
              57.5% + 1rem
            ); // 7 columns * 8.3333% = 57.5%, 1rem gutter on lhs of image
            width: auto;

            // Align right image styling
            background: center / cover no-repeat;
          }

          // Left (Solid) to right (transaperent) gradient overlay, needs .align-right class on same container
          // e.g: .banner-image.align-right.with-gradient
          &.with-gradient {
            .banner-image-inner:before {
              content: "";
              position: absolute;
              top: 0;
              right: 0;
              bottom: 0;
              left: 0;
              background-image: linear-gradient(
                to right,
                var(--#{$prefix}banner-bg-color),
                transparent
              );
            }
          }
        }
      }
    }
  }
}
/* ... */

